# HR-RAG

./: .env.example  .gitignore  README.md  document_ingestion.py  main.py  pyproject.toml  requirements.txt  test_setup.py
